# Citrus

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
datas/download_files/care_qa/: care_qa.jsonl
datas/download_files/jmed/: 20250122_sample_multiple_choice_1094_qwenscored_adjusted.xlsx
datas/download_files/medqa/: medqa_train_small.jsonl
datas/download_files/mmlu-pro/: mmlu-pro_biology.jsonl  mmlu-pro_health.jsonl
datas/origin_files/origin_files/: jmed.jsonl  medbullets_op4.jsonl  medbullets_op5.jsonl  medqa.jsonl  medqa_train_small.jsonl  mmlu-anatomy.jsonl  mmlu-clinical_knowledge.jsonl  mmlu-college_biology.jsonl  mmlu-college_medicine.jsonl  mmlu-medical_genetics.jsonl  mmlu-pro_biology.jsonl  mmlu-pro_health.jsonl  mmlu-professional_medicine.jsonl  pubmedqa.jsonl
datas/origin_files/origin_files_w_data_label/: medqa_train_small.jsonl
model_train/: run_cpo.sh  run_sft.sh  supervised_finetune.py
model_train/accelerate_configs/: deepspeed_zero3_4nodes.yaml
model_train/alignment/: configs.py  data.py  model_utils.py
model_train/example_data_for_train/: dpo_data.jsonl  sft_data.jsonl
model_train/scripts/: cpo_trainer.py  run_cpo.py
src/: main.py
src/apps/data_preprocess/: create_origin_file_process.py  create_origin_file_with_data_label_process.py  create_question_file_process.py  main_task.py
src/apps/data_synthesis/: main_task.py  sft_data_synthesis_process.py  utils.py  xpo_sample_process.py
src/task/: task.py  task_process.py
src/utils/: model_inference.py  model_inference_http.py  model_inference_vllm.py
(+58 files in other folders)
