[project]
name = "Citrus"
version = "0.1.0"
description = ""
authors = [
    {name = "yangshuai", email="yangshuai15@jd.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "dynaconf (>=3.2.7,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "openai (>=1.64.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
